Modifica primo branch colore verde

--- a/random.html
+++ b/random.html
@@ -25,7 +25,7 @@
             cursor: pointer;
             border: none;
             background-color: #007BFF;
-            color: white;
+            color: green;
             border-radius: 5px;
         }
         button:hover {
